--- a/3rd-website/style.css
+++ b/3rd-website/style.css
@@ -115,3 +115,69 @@ body {
     background-color: rgb(126, 125, 125);
     color: rgb(255, 255, 255);
 }
+/* media query  */
+@media (max-width:597px){
+    .textbg-3{
+        font-size: 15px;
+    }
+
+}
+@media (max-width:499px){
+    .ptext  {
+        position: absolute;
+        top: 50%;
+        text-align: center;
+        width: 100%;
+        letter-spacing: 4px;
+        color: black;
+        font-size: 15px;
+        text-transform: uppercase;
+        
+       
+    
+    
+    }
+    .pigm1{
+        min-height: 50%;
+    }
+    .pigm4{
+        min-height: 50%;
+    }
+
+
+
+}
+@media (max-width:418px){
+
+    .ptext  {
+        position: absolute;
+        top: 50%;
+        text-align: center;
+        width: 100%;
+        letter-spacing: 4px;
+        color: black;
+        font-size: 10px;
+        text-transform: uppercase;
+        
+       
+    
+    
+    }
+    .textbg-3{
+        font-size: 10px;
+    }
+
+
+}
+@media (max-width:397px){
+    .section-dark h2{
+        font-size: 20px;
+    }
+    
+    .section-dark p{
+        font-size: 10px;
+    }
+
+
+
+}
