--- a/6th-Music/style.css
+++ b/6th-Music/style.css
@@ -275,9 +275,13 @@ h5 {
     text-align: center;
     position: absolute;
 }  */
-.video-section {
+.video-section{
+    height: 600px;
+}
+.video-content {
     /* display: grid; */
     position: relative;
+    /* min-height: 100%; */
 
 }
 
@@ -285,10 +289,11 @@ h5 {
     width: 100vw;
     position: absolute;
     right: 0;
+    /* height: 200px; */
 }
 
 .hero,
-.video-section {
+.video-content {
     position: relative;
     background-size: cover;
     background-repeat: no-repeat;
@@ -301,7 +306,7 @@ h5 {
 }
 
 .card {
-    margin-top: 700px;
+    padding-top: 50px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -333,7 +338,7 @@ h5 {
 }
 
 .card-img img {
-    width: 400px;
+    width: 100%;
 }
 .gift-btn{
     padding: 10px 15px;
@@ -377,57 +382,13 @@ h5 {
 
 }
 
-
-
-
-@media (max-width:500px) {
-    .nav-container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .nav-list {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .nav-list ul {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .hero-logo img {
-        width: 100px;
-    }
-
-    .ipad-img img {
-        max-width: 70vw;
-        /* position:relative; */
-    }
-
-    .laptop-section {
-        margin-top: 440px;
-
-    }
-
-    .laptop-img img {
-        max-width: 70vw;
-    }
-    .card-img img{
-        max-width:50vw;
-    }
-    .container{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-
-    }
-
-}
+         
+              /* media query */
 
 @media(max-width:1000px) {
-
+    .hero-logo p{
+        font-size: 10px;
+    }
     .ipad-img {
         top: 240px;
         margin-top: -240px;
@@ -437,6 +398,59 @@ h5 {
         margin-top: 260px;
 
     }
+    /* .video-section{
+        height:500px;
+    } */
+}
+@media(max-width:910px) {
+
+    .gift-text p {
+        color: black;
+        font-size: 15px;
+    
+    
+    }
+    
+    .gift-text h3 {
+        font-size: 20px;
+    
+    
+    }
+    .card-img img{
+        max-width:100%;
+    }
+   
+
+
+
+}
+@media(max-width:827px) {
+    /* .video-section{
+        height: 450px;
+    } */
+
+}
+@media(max-width:640px) {
+
+
+    .laptop-section {
+        margin-top: 140px;
+
+    }
+    .card{
+        display: flex;
+        flex-direction: column;
+        /* padding-top:-100px ; */
+
+    }
+    .card-img img{
+        max-width:100%;
+    }
+    /* .video-section{
+        height: 350px;
+    } */
+    
+   
 }
 
 @media(max-width:630px) {
@@ -454,25 +468,63 @@ h5 {
         margin-top: -150px ;
 
     }
+   
 }
 
-@media(max-width:640px) {
 
-
-    .laptop-section {
-        margin-top: 140px;
-
-    }
-    .card{
+@media (max-width:500px) {
+    .nav-container {
         display: flex;
         flex-direction: column;
+    }
 
+    .nav-list {
+        display: flex;
+        flex-direction: column;
+    }
+
+    /* .nav-list ul {
+        display: flex;
+        flex-direction: column;
+    } */
+    .hero{
+        height: 50vh;
+    }
+    main{
+        min-height: 50%;
+    }
+    .hero-logo p{
+        font-size: 10px;
+    }
+
+    .hero-logo img {
+        width: 100px;
+    }
+
+    .ipad-img img {
+        max-width: 70vw;
+        /* position:relative; */
+    }
+
+    /* .laptop-section {
+        margin-top: 440px;
+
+    } */
+
+    .laptop-img img {
+        max-width: 70vw;
     }
     .card-img img{
         max-width:50vw;
     }
-    
-   
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+    }
+
 }
 
 @media (max-width:350px) {
