--- a/6th-Music/style.css
+++ b/6th-Music/style.css
@@ -22,7 +22,7 @@ body {
     line-height: 1.4;
     font-weight: 300;
     font-family: 'Roboto', sans-serif;
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth;
     background-color: var(--backcolor);
 
 }
