--- a/2nd-login-page/style.css
+++ b/2nd-login-page/style.css
@@ -1,94 +1,156 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+:root {
+  --textcolor: white;
+
 }
-body{
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+body {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background: url(Desktop\ -\ 1.jpg);
 
 
-background-color: rgb(174, 224, 238);
 }
+
 .content h1 {
-    /* min-height: 100vh; */
-    max-width: 1000px;
-    margin: 0 auto;
-    /* text-align: justify; */
+  max-width: 1000px;
+  margin: 0 auto;
+
+  color: var(--textcolor);
 
 }
-.content{
-    border: 1px solid black;
-    border-radius: 10px;
-    max-width: 600px;
-    padding: 20px;
-    margin: 0 auto;
-    margin-top: 50px;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
-    background-color: rgb(255, 255, 255);
+
+.form_container label {
+  color: var(--textcolor);
+}
+
+.form_control input {
+  color: var(--textcolor);
+}
+
+.content {
+
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  max-width: 600px;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 50px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  background: transparent;
+  backdrop-filter: blur(20px);
 
 }
-.content_w{
-    font-size: 23px;
+
+.content_w {
+  font-size: 23px;
 }
-.form_container{
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
-    gap: 20px;
+
+.form_container {
+  margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
 
 }
-.form_control{
-    display: flex;
-    flex-direction: column;
+
+.form_control {
+  display: flex;
+  flex-direction: column;
 
 }
+
 label {
-    font-size: 15px;
-    margin-bottom: 5px;
-  }
+  font-size: 15px;
+  margin-bottom: 5px;
+  outline-color: none;
+}
+
+.form_control input::placeholder {
+  color: var(--textcolor);
+  font-size:smaller;
+
+}
+
+.form_control select {
+  color: var(--textcolor);
+  font-size: smaller;
   
-  input,
-  select,
-  textarea {
-    padding: 6px 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 15px;
-  }
-  input:focus {
-    outline-color: red;
-  }
-  
-  .button_container {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
-  }
-  button {
-    background-color: red;
-    border: transparent solid 2px;
-    padding: 5px 10px;
-    color: white;
-    border-radius: 8px;
-    transition: 0.3s ease-in;
-  }
-  button:hover {
-    background-color: #ccc;
-    border: 2px solid red;
-    color: black;
-    transition: 0.3s ease-out;
-    cursor: pointer;
-  }
-  
+}
+
+
+.form_control option {
+
+  background-color: rgb(0, 0, 0);
+}
+
+input,
+select,
+textarea {
+  padding: 6px 10px;
+  border: 1px solid #fdfdfd91;
+  border-radius: 4px;
+  font-size: 15px;
+  /* border: none; */
+  background: transparent;
+}
+
+input:focus {
+  outline-color: rgba(0, 0, 0, 0);
+
+}
+
+.button_container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+button {
+  background-color: rgb(255, 255, 255);
+  border: transparent solid 2px;
+  padding: 5px 10px;
+  color: rgb(0, 0, 0);
+  border-radius: 8px;
+  transition: 0.3s ease-in;
+}
+
+button:hover {
+  background-color: #4d4a4a;
+  /* border: 2px solid rgb(255, 255, 255); */
+  color: rgb(255, 255, 255);
+  transition: 0.3s ease-out;
+  cursor: pointer;
+}
+
+
+
+
+.textarea_control {
+  grid-column: 1 / span 2;
+
+}
+
+.textarea_control textarea {
+  width: 100%;
+
+
+}
+
+.textarea_control textarea {
+  color: var(--textcolor);
+
+
+}
+
+@media (max-width: 460px) {
   .textarea_control {
-    grid-column: 1 / span 2;
+    grid-column: 1 / span 1;
   }
-  .textarea_control textarea {
-    width: 100%;
-    outline-color: red;
-  }
-  @media (max-width: 460px) {
-    .textarea_control {
-      grid-column: 1 / span 1;
-    }
-  } ;
-  
+}
