--- a/9th-BlogWebsite/style.css
+++ b/9th-BlogWebsite/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+
+:root {
+    --h1font:8rem;
+    --h2font:4rem;
+    --ptext:1.5rem;
+}
 * {
     padding: 0;
     margin: 0;
@@ -19,9 +25,7 @@ body {
 
 }
 
-body {
-    font-size: 1.4rem;
-}
+
 
 nav {
     display: flex;
@@ -69,67 +73,66 @@ nav i {
 main {
     max-width: 1200px;
     margin: 0 auto;
+    padding: 4rem;
 }
 
+
+/* hero */
+
+
 #hero {
-    display: flex;
+    display: grid;
     align-items: center;
-    justify-content: space-between;
-    padding-top: 1.8rem;
+    grid-template-columns: repeat(2,1fr);
+    /* padding-top: 1.8rem; */
     padding-bottom: 1.8rem;
 }
 
 .hero-img img {
     border-radius: 3rem;
+    width: 100%;
 }
 
-.hero-text h1 {
-    font-size: 6rem;
+ .hero-text h1 {
+    font-size:var(--h1font);
 
 
 }
 
 .hero-text p {
-    font-size: 2.4rem;
+    font-size:3rem;
     font-weight: 300;
 }
-
-.long-card {
-    display: flex;
+/* long card */
+.long-card{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
     align-items: center;
-    justify-content: space-between;
-    gap: 3.4rem;
-    /* padding-top: 1.8rem; */
-    box-shadow: 0px 5px 4px rgb(176, 176, 176);
-    border-radius: 1rem;
+    margin: 0 auto;
+    /* box-shadow: 0px 5px 4px rgb(176, 176, 176); */
+    border-radius: 3rem;
+    gap: 1rem;
+    /* padding: 2rem; */
+}
+.card-img img{
+    width: 100%;
+    border-radius: 3rem;
+}
+.long-card-content h2{
+    font-size: var(--h2font);
+
+}
+.long-card-content p{
+    font-size: var(--ptext);
 
 }
 
-.card-img img {
-    border-radius: 0 1rem 1rem 0;
-}
 
-.card-content {
-    display: flex;
-    flex-direction: column;
-    padding-left: 1rem;
-
-
-}
-
-.card-content h1 {
-    padding-bottom: 1.5rem;
-
-}
-
-.card-content p {
-    padding-bottom: 1.5rem;
-}
 
 .card-status {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 3rem;
 
 }
 
@@ -145,13 +148,23 @@ button:hover {
     background-color: gray;
     color: white;
 }
-
+/* service */
 .card {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, auto));
     gap: 1.5rem;
     padding-top: 1.8rem;
     padding-bottom: 1.8rem;
+
+}
+.card-content{
+    padding: 2rem;
+}
+.card-content h3{
+    font-size: 2rem;
+}
+.card-content p{
+    font-size: var(--ptext);
 
 }
 
@@ -160,7 +173,7 @@ button:hover {
     display: flex;
     align-items: center;
     max-width: 300px;
-    height: 380px;
+    /* height: 380px; */
     /* gap: 3.4rem; */
     box-shadow: 0px 5px 4px rgb(176, 176, 176);
     border-radius: 1rem;
@@ -279,17 +292,154 @@ a {
     color: #000;
 }
 
+/* media */
+@media(max-width:1070px){
+    html{
+        font-size: 55%;
+    }
+}
+@media(max-width:850px){
+    html{
+        font-size: 45%;
+    }
+}
+@media(max-width:710px){
+    :root {
+        --h1font:7rem;
+        --h2font:4rem;
+        --ptext:1.5rem;
+    }
+    html{
+        font-size: 40%;
+    }
+    #hero{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        align-items: center;
 
-@media (max-width:1212px) {
+    }
+    .hero-img{
+        width: 400px;
+        margin: 0 auto;
+
+    }
+    .hero-img img{
+        width: 100%;
+
+    }
+    .hero-text{order: 2;}
+    .long-card{
+        display: grid;
+        grid-template-columns:1fr;
+        align-items: center;
+        margin: 0 auto;
+        /* box-shadow: 0px 5px 4px rgb(176, 176, 176); */
+        border-radius: 2rem;
+        gap: 1rem;
+        /* padding: 2rem; */
+    }
+    .long-card-content{
+        order: 2;
+    }
+    .card-img{
+        width: 400px;
+        margin: 0 auto;
+
+    }
+}
+@media(max-width:460px){
+    :root {
+        --h1font:6rem;
+        --h2font:3.5rem;
+        --ptext:1.3rem;
+    }
+    html{
+        font-size: 30%;
+    }
+    .card-img{
+        width: 300px;
+        margin: 0 auto;
+
+    }
+
+.hero-img{
+    width: 300px;
+    margin: 0 auto;
+
+}
+.card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, auto));
+    gap: 1.5rem;
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+
+}
+}
+@media(max-width:330px){
+    :root {
+        --h1font:5rem;
+        --h2font:3rem;
+        --ptext:1.2rem;
+    }
+    html{
+        font-size: 30%;
+    }
+    .card-img{
+        width: 250px;
+        margin: 0 auto;
+
+    }
+
+.hero-img{
+    width: 250px;
+    margin: 0 auto;
+
+}
+.card {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, auto));
+    /* gap: 1.5rem; */
+    padding-top: 1.8rem;
+    padding-bottom: 1.8rem;
+
+}
+.card1 {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    max-width: 120px;
+   
+}
+.card1-img img{
+    width: 100%;
+}
+.card-btn button{
+    width: 50%;
+}
+.card-btn {
+
+font-size: 1rem;
+}
+.card-status{
+    width: 100%;
+}
+}
+
+
+/* media */
+
+/* @media (max-width:1212px) {
     main {
         padding-top: 0;
         padding-left: 2.5rem;
         padding-right: 2.5rem;
         padding-bottom: 0;
     }
-}
+} */
 
-@media (max-width:982px) {
+/* @media (max-width:982px) {
     .card {
         display: flex;
         align-items: center;
@@ -310,12 +460,11 @@ a {
 
 
     }
-}
+} */
 
 
-@media (max-width:830px) {
+/* @media (max-width:830px) {
     #hero {
-        /* width: 400px; */
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -332,62 +481,33 @@ a {
         font-size: 2.4rem;
     }
 
-    .card {
-        display: flex;
+   
 
-        align-items: center;
-
-        justify-content: space-between;
-
-    }
-
-    .card1 h1 {
-        font-size: 1.2rem;
-
-    }
-
-    .card1 p {
-        font-size: 1rem;
-
-    }
-
-    .card-btn {
-        font-size: 0.8rem;
-        padding: 0.5rem;
-
-    }
-
-    .card {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-
-    }
-
-    .card1 {
-        max-width: 170px;
-        height: auto;
-
-    }
-
-    .card1 img {
-        max-width: 170px;
-
-
-
-
-    }
 }
+ */
+
+/* @media (max-width:758px) {
+    .card-content h1{
+        font-size: 2rem;
+    }
+    .card-content p{
+        font-size: 1rem;
+    }
+    .card-status button{
+        font-size: 1rem;
+        padding: 1rem 2rem;
+    }
+    .long-card img{
+        width: 100%;
+    }
+} */
 
 
 
 
-
-
-@media (max-width:748px) {
+/* @media (max-width:748px) {
     #hero {
-        /* width: 400px; */
+       
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -423,36 +543,7 @@ a {
         width: 100%;
     }
 
-    .card-content h1 {
-        font-size: 2rem;
-    }
-
-    .card-content p {
-        font-size: 1rem;
-    }
-
-    .card-status p {
-        font-size: 0.7rem;
-    }
-}
-
-@media (max-width:570px) {
-    .card img {
-        width: 100%;
-    }
-
-    .card-content h1 {
-        font-size: 0.8rem;
-    }
-
-    .card-content p {
-        font-size: 0.4rem;
-    }
-
-    .card-status p {
-        font-size: 0.3rem;
-    }
-}
+} 
 
 @media (max-width:570px) {
     footer h3 {
@@ -474,11 +565,12 @@ a {
     footer i {
         font-size: 1.5rem;
     }
+   
 
 
 }
 
-@media (max-width:585px) {
+/* @media (max-width:585px) {
     .card1 {
         max-width: 150px;
         height: auto;
@@ -509,15 +601,15 @@ a {
 
     }
 
-    .card {
+     .card {
         display: flex;
         align-items: center;
         justify-content: space-between;
 
 
-    }
+    } 
 
-}
+} 
 
 @media (max-width:537px) {
     #hero {
@@ -545,7 +637,7 @@ a {
 
 }
 
-@media(max-width:527px) {
+/* @media(max-width:527px) {
     .card1 {
         max-width: 120px;
         height: auto;
@@ -577,15 +669,12 @@ a {
 
     }
 
-    .card {
-        display: flex;
-        flex-direction: column;
-    }
+   
 
 
 
 
-}
+} 
 
 
 @media (max-width:500px) {
@@ -685,4 +774,4 @@ a {
     nav ul li {
         font-size: 0.5rem;
     }
-}
+ } */
